<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('barangay_sequence', function (Blueprint $table) {
            $table->id('brgy_id');
            $table->string('barangay')->unique();
            $table->char('prefix', 1);
            $table->integer('next_number');
            $table->boolean('Synced')->default(false);
            $table->timestamp('last_sync')->nullable();
            $table->timestamp('updated_at');
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('barangay_sequence');
    }
};